--- a/src/app/_modals/proyects/delete-proyect/delete-proyect.component.html
+++ b/src/app/_modals/proyects/delete-proyect/delete-proyect.component.html
@@ -11,12 +11,13 @@
           <div class="modal-body">
             <div class="row">
                 <div class="col-md-12">
-                  <p class="subtitulo">Estas a punto de eliminar el proyecto, al hacerlo se perderan todos los documentos, ¿estas seguro de continuar?</p>
+                  <p class="subtitulo">Estas a punto de eliminar el proyecto, al hacerlo se perderan todos los archivos, ¿estas seguro de continuar?</p>
                 </div>
             </div>
           </div>
             <div class="modal-footer">
               <button type="submit" class="btn btn-info btn-fill pull-right">Eliminar</button>
+              <button class="btn btn-danger btn-fill pull-right" data-dismiss="modal" aria-label="Close">Cancelar</button>
             </div>
         </form>
       </div>
