--- a/src/app/proyects/proyects.component.html
+++ b/src/app/proyects/proyects.component.html
@@ -31,7 +31,7 @@
                                                 <button class="btn btn-simple btn-icon" (click)="verKanban(row.id)"><i class="fa fa-check-square-o"></i></button>
                                                 <button class="btn btn-simple btn-icon" (click)="verDetalle(row.id)"><i class="fa fa-eye"></i></button>
                                                 <button class="btn btn-simple btn-icon" data-toggle="modal" data-dismiss="modal" data-target="#newProyecto" (click)="editar(row.id)" ><i class="fa fa-edit"></i></button>
-                                                <button class="btn btn-simple btn-icon"><i class="fa fa-cloud-download"></i></button>
+                                                <button class="btn btn-simple btn-icon" data-toggle="modal" data-target="#uploadProyecto" (click)="resetFiles()"><i class="fa fa-cloud-upload"></i></button>
                                                 <button class="btn btn-simple btn-icon"><i class="fa fa-refresh"></i></button>
                                                 <button class="btn btn-simple btn-icon" data-toggle="modal" data-dismiss="modal" data-target="#deleteProyecto"><i class="fa fa-trash-o"></i></button>                                      
                                             </td>
@@ -45,4 +45,4 @@
         </div>
     </div>
 </div>
-<app-proyect (proyectEvent)="getProyects()"></app-proyect>
+<app-proyect (proyectEvent)="elementoGuardado()"></app-proyect>
