--- a/src/app/_modals/files/up-file/up-file.component.html
+++ b/src/app/_modals/files/up-file/up-file.component.html
@@ -7,7 +7,7 @@
           <span aria-hidden="true">&times;</span>
           </button>
         </div>
-        <form>
+        <form method="post" action="greet" enctype="multipart/form-data">
           <div class="modal-body">
               <p class="subtitulo">Selecciona el documento o los documentos que deseas cargar.</p>
               <div>
@@ -18,15 +18,15 @@
               </div><br/>
               <div *ngIf="!modalLoading">
                   <p *ngFor="let file of filesToUpload;let i=index;">{{file.file.name}}<span 
-                      class="pesoDocumento">{{file.file.size/1000 | number:'.1-2'}} KB</span>
-                      <span style="font-size:20px;color: #c53030;margin-top:-5px;cursor:pointer;" *ngIf="!isLoading" (click)="remove(i)">&times;</span>
-                  <br/><span style="font-size:13px;color: #c53030;margin-top:-5px;">{{file.error}}</span>
+                      class="pesoDocumento"> [{{file.file.size/1000 | number:'.1-2'}} KB ]</span>
+                    <span style="font-size:20px;color: #c53030;margin-top:-5px;cursor:pointer;" *ngIf="!isLoading" (click)="remove(i)">&times;</span>
+                  <br/><span style="font-size:13px;color: #c53030;margin-top:-5px;"> {{file.error}}</span>
                       <span *ngIf="errorRecuperado" style="font-size:13px;color: #c53030;margin-top:-5px;">{{errorRecuperado}}</span>
                   </p>
               </div>
           </div>
           <div class="modal-footer">
-              <button type="submit" class="btn btn-info btn-fill pull-right" [ngClass]="{'btn_disabled':isLoading}">Guardar</button>
+              <button (click)="guardarArchivos()" type="submit" class="btn btn-info btn-fill pull-right" [ngClass]="{'btn_disabled':isLoading}" data-dismiss="modal" aria-label="Close">Guardar</button>
               <button (click)="removeAll()" class="btn btn-danger btn-fill pull-right" data-dismiss="modal" aria-label="Close">Cancelar</button>
             </div>
         </form>
