--- a/src/app/charts/charts.component.html
+++ b/src/app/charts/charts.component.html
@@ -42,7 +42,7 @@
             </div>
             <div class="col-md-3">
                 <div class="div_metricas">
-                    <p class="metricas_number"><i class="fa fa-hand-peace-o r_5"></i> {{bodyCharts.duplicados}}</p>
+                    <p class="metricas_number"><i class="fa fa-hand-peace-o r_5"></i> {{bodyCharts.duplicados}}%</p>
                     <p class="metricas_title">Duplicados</p>
                 </div>
             </div>
