--- a/src/app/charts/charts.component.html
+++ b/src/app/charts/charts.component.html
@@ -5,7 +5,7 @@
             <div class="col-md-12">
                 <div class="div_metricas">
                     <p *ngIf="!statusFlad" class="metricas_status_ok"><i class="fa fa-check r_5"></i>  {{bodyCharts.status}}</p>
-                    <p *ngIf="statusFlad" class="metricas_status_fail"><i class="fa fa-check r_5"></i>  {{bodyCharts.status}}</p>
+                    <p *ngIf="statusFlad" class="metricas_status_fail"><i class="fa fa-times r_5"></i>  {{bodyCharts.status}}</p>
                 </div>
             </div>
         </div>
