--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -5,11 +5,7 @@
         Sistema Estudiantil de Gestión y punto de Compra Venta de Proyectos de Programación Académicos
       </div>
       <div class="campos_form">
-        <p class="etiqueta_form">Correo Electronico:</p>
-        <input class="input_form" type="text">
-        <p class="etiqueta_form">Contraseña:</p>
-        <input class="input_form" type="text">
-        <button type="submit" class="btn btn_login" (click)="login()">Iniciar Sesion</button>
+        <button type="submit" class="btn btn_login" (click)="login()">Iniciar Servidores</button>
       </div>
     </div>
   </div>
