--- a/src/app/proyects/proyects.component.html
+++ b/src/app/proyects/proyects.component.html
@@ -55,4 +55,5 @@
     </div>
 </div>
 <app-proyect (proyectEvent)="elementoGuardado()"></app-proyect>
+<div class="loader" *ngIf="blockLoader"></div>
 </app-maincontainer>
